Archive2/1f/52acfec3e323ee/output
main.cpp:3:1: error: 'main' must return 'int'
void main()
^~~~
int
1 error generated.
